--- a/style.css
+++ b/style.css
@@ -801,3 +801,50 @@ select {
     width: 100%;
     height: 100%;
 }
+
+
+/Rechte des TVs */  
+
+#rightsContainer {
+    width: 52.5%;
+    height: 30%;
+
+    overflow-y: hidden;
+
+    position: fixed;
+    z-index: 11;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: var(--background);
+    box-shadow: 0px 0px 10px black;
+
+    border-radius: 16px;
+
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+#rightsContainer[data-showing="true"] {
+    opacity: 1;
+}
+
+#rightsContainer::-webkit-scrollbar {
+    display: none;
+}
+
+#rightsContainer_title {
+    width: 100%;
+    color: white;
+    text-align: center;
+
+    padding-top: 5px;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+#rightsContainer iframe {
+    width: 100%;
+    height: 100%;
+}
