--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --button: #2b2b2b;
     --accent: #525600;
     --buttonhover: #6565ff;
-    --background: #1d1d1d;
+    --background: #262626;
     --inputs: #121212;
 }
 
