--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --textsecond: #ffffff;
     --button: #2b2b2b;
     --accent: #525600;
-    --buttonhover: #6565ff;
+    --buttonhover: #FF1493;
     --background: #262626;
     --inputs: #121212;
 }
