--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --textprim: #bababa;
     --textsecond: #ffffff;
-    --button: #6E6E6E;
+    --button: ##0a0a0a;
     --accent: #525600;
     --buttonhover: #FF1493;
     --background: #262626;
