--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     --textsecond: #ffffff;
     --button: ##0a0a0a;
     --accent: #525600;
-    --buttonhover: #FF1493;
-    --background: #262626;
-    --inputs: #121212;
+    --buttonhover: #9932CC;
+    --background: #121212;
+    --inputs: #242424;
 }
 
 
