--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --accent: #525600;
     --buttonhover: #9932CC;
     --background: #121212;
-    --inputs: #242424;
+    --inputs: #0A0A0A;
 }
 
 
